<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/general_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/itemRouteName"
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/text_margin"
            android:text="TextView"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/initialsIcon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_weight="0"
            android:background="@drawable/teammate_icon"
            android:gravity="center"
            android:padding="@dimen/general_padding"
            android:text="JL"
            android:textSize="12dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/itemRouteStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="@dimen/text_margin"
        android:text="TextView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/itemRouteSteps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/text_margin"
            android:text="TextView" />

        <TextView
            android:id="@+id/itemRouteDist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/text_margin"
            android:text="TextView" />

        <TextView
            android:id="@+id/itemRouteTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/text_margin"
            android:text="TextView" />
    </LinearLayout>

</LinearLayout>