...
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="Route Name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/startLoc"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="Start Location"
                android:inputType="textPersonName" />
...
                android:background="@drawable/border"
                android:ems="10"
                android:gravity="top|left"
                android:inputType="textLongMessage" />

            <ToggleButton
                android:id="@+id/favoriteBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textOff="Add to Favorites"
                android:textOn="Remove from Favorites" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="4dp"
                android:text="Save" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
