...
    <string name="dist_placeholder">3.5 mi</string>
    <string name="time_placeholder">1:30:20</string>

    <string name="step_count_string">Steps: </string>
    <string name="distance_string">Distance:</string>
    <string name="Today_string">Today</string>
    <string name="start_string">Start new walk/run</string>
    <string name="stop_string">Stop walk/run</string>
    <string name="intent_walk_string">Current/last walk</string>
    <string name="time_string">Time:</string>
    <string name="start_loc"> Start: </string>

    <string name="dist_format">%.2f mi</string>

...
